--- a/06.html
+++ b/06.html
@@ -12,6 +12,10 @@ function navigate(e) {
         window.location = "05.pl" + ".html";
         return false;
     }
+    if (keynum == 13 || keynum == 32) {
+        window.location = "07" + ".html";
+        return false;
+    }
     if (keynum == 73 || keynum == 105) {
         window.location = "index.html";
         return false;
@@ -27,10 +31,10 @@ function navigate(e) {
 
 
 
-
-                               The End
-
-
+                             Get Vroom!
+     
+     * http://search.cpan.org/dist/Vroom/
+     * http://github.com/ingydotnet/vroom-pm/
 
 
 
