--- a/07.html
+++ b/07.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>01</title>
+<title>07</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <script>
 function navigate(e) {
@@ -9,10 +9,11 @@ function navigate(e) {
         ? e.keyCode
         : e.which;
     if (keynum == 8) {
+        window.location = "06" + ".html";
         return false;
     }
     if (keynum == 13 || keynum == 32) {
-        window.location = "02" + ".html";
+        window.location = "08" + ".html";
         return false;
     }
     if (keynum == 73 || keynum == 105) {
@@ -29,11 +30,11 @@ function navigate(e) {
 
 
 
-                                    Vroom!
+
+                            Vroom as HTML
      
-                               by Ingy döt Net
-     
-                               (hint: spacebar)
+     * http://ingydotnet.github.com/vroom-pm/
+
 
 
 
