--- a/08.html
+++ b/08.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>01</title>
+<title>08</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <script>
 function navigate(e) {
@@ -9,10 +9,7 @@ function navigate(e) {
         ? e.keyCode
         : e.which;
     if (keynum == 8) {
-        return false;
-    }
-    if (keynum == 13 || keynum == 32) {
-        window.location = "02" + ".html";
+        window.location = "07" + ".html";
         return false;
     }
     if (keynum == 73 || keynum == 105) {
@@ -29,11 +26,11 @@ function navigate(e) {
 
 
 
-                                    Vroom!
-     
-                               by Ingy döt Net
-     
-                               (hint: spacebar)
+
+
+                               The End
+
+
 
 
 
