--- a/01.html
+++ b/01.html
@@ -28,11 +28,11 @@ function navigate(e) {
 
 
 
-                                    Vroom!
-     
-                               by Ingy döt Net
-     
-                               (hint: spacebar)
+                               Vroom!
+
+                          by Ingy döt Net
+
+                     (hint: press the spacebar)
 
 
 
