--- a/02z.html
+++ b/02z.html
@@ -34,7 +34,7 @@ function navigate(e) {
      * Use Vroom!
      
      * You can write you slides in Vim...
-     * ...and display them in Vim!
+     * ...and present them in Vim!
 
 
 
