--- a/03.html
+++ b/03.html
@@ -34,7 +34,7 @@ function navigate(e) {
      * Write a file called 'slides.vroom'.
        * Do this in a new directory.
      * Run 'vroom --vroom'.
-     * Done!
+     * Voilà!
 
 
 
