--- a/05.pl.html
+++ b/05.pl.html
@@ -31,7 +31,7 @@ function navigate(e) {
 
     # This is some Perl code.
     # Notice the syntax highlighting.
-    # Run it with the &lt;R&gt; key.
+    # Run it with the &lt;RR&gt; vim command.
     for my $word (qw(Vroom totally rocks!)) {
         print &quot;$word\n&quot;;
     }
